syntax = "proto3";

package test.common.http.http2;

import "test/fuzz/common.proto";

import "buf/validate/validate.proto";

// Structured input for hpack_fuzz_test.

message HpackTestCase {
  test.fuzz.Headers headers = 1 [(buf.validate.field).required = true];
  bool end_headers = 2;
}
